# Talker

./: README.md  newchat.sql
Client/: CMakeLists.txt  CMakeLists.txt.user.19b4475  CMakeLists.txt.user.6063f65  chatlist.cpp  chatlist.h  chatlistitem.cpp  chatlistitem.h  chatlistitem.ui  chatlistleave.cpp  chatlistleave.h  chatlistleave.ui  chatlistsetting.cpp  chatlistsetting.h  chatlistsetting.ui  chatroom.cpp  chatroom.h  db.cpp  db.h  db.ui  find.cpp  find.h  find.ui  frienddelete.cpp  frienddelete.h  frienddelete.ui  friendlist.cpp  friendlist.h  friendlist.ui  idfind.cpp  idfind.h  idfind.ui  initialwidget.cpp  initialwidget.h  initialwidget.ui  loadingwidget.cpp  loadingwidget.h  loadingwidget.ui  loginwidget.ui  logo.qrc  mainwindow.cpp  (+31 more)
Server/: CMakeLists.txt  CMakeLists.txt.user.6063f65  chatserver.cpp  chatserver.h  dbutil.cpp  dbutil.h  main.cpp
